# P2P_Gram

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
client/: CMakeLists.txt
client/src/: ClientApp.h  client.cpp
include/client/: client.h
include/common/: logger.h
include/server/: server.h
server/: CMakeLists.txt
server/src/: server.cpp
src/client/: client.cpp
src/server/: server.cpp
